--- a/image/scripts/sample.toml
+++ b/image/scripts/sample.toml
@@ -2,7 +2,7 @@
 # Remove http_port to make the server use ENV["PORT"]. Heroku users must do this.
 http_port = 8001
 http_ip = "0.0.0.0"
-stop_file = "/tmp/stopregistrator"    # `touch` this file to stop Registrator
+stop_file = "/tmp/stopserver"    # `touch` this file to stop the github listener
 log_level = "debug"
 
 [github]
@@ -33,6 +33,8 @@ base_branch = "master"
 [registrator]
 trigger = "@JuliaRegistrator"   # The comment that should trigger Registrator. Typically
                                 # keep this the same as your GitHub user (with `@` prefixed)
+
+stop_file = "/tmp/stopregistrator" # `touch` this file to stop Registrator process
 
 issue_repo = "JuliaRegistries/Registrator.jl"
 report_issue = false            # If set to true any unhandled error will be reported as
